--- a/BR-MS/EditProfile.html
+++ b/BR-MS/EditProfile.html
@@ -33,6 +33,7 @@
                             <p><span class="keys">固定电话</span><span>{{props.row.tel}}</span></p>
                             <p><span class="keys">电子邮箱</span><span>{{props.row.email}}</span></p>
                             <p><span class="keys">联系地址</span><span>{{props.row.address}}</span></p>
+                            <p><span class="keys">仓库ID</span><span>{{props.row.warehouseId}}</span></p>
                         </template>
                     </el-table-column>
                 </el-table>
